[gd_scene load_steps=10 format=3 uid="uid://ffyuf8apar7g"]

[ext_resource type="Script" path="res://UI/CardDisplay.gd" id="1_p8ces"]
[ext_resource type="Resource" uid="uid://c22fntv8t1gh" path="res://Spells/Showcase Spells/Beam/Beam Card.tres" id="2_4mye5"]
[ext_resource type="Texture2D" uid="uid://85vemjcgt8b" path="res://Art/random.png" id="3_addv4"]
[ext_resource type="Texture2D" uid="uid://bcw8a6eddsu2t" path="res://Cancel.png" id="4_eleac"]
[ext_resource type="Texture2D" uid="uid://6mvrhr7ftmdg" path="res://accept.png" id="5_jfr48"]
[ext_resource type="Texture2D" uid="uid://0lgjna2a8axp" path="res://lock.png" id="6_6wcql"]

[sub_resource type="Shader" id="Shader_hlk45"]
code = "shader_type canvas_item;

uniform vec4 new_color: source_color;

void fragment() {
	vec4 curr_color = texture(TEXTURE, UV);
	// Find only blue pixels
	if (curr_color.rga == vec3(0,0,1)  && curr_color.b > 0.0) {
		COLOR.rgb = new_color.rgb* curr_color.b;
	}

}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ffecw"]
shader = SubResource("Shader_hlk45")
shader_parameter/new_color = Color(0.580392, 0.270588, 0.815686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pgvk1"]
bg_color = Color(0, 0, 0, 0.564706)
corner_detail = 1

[node name="Card Option" type="PanelContainer"]
texture_filter = 1
offset_right = 8.0
offset_bottom = 8.0
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_p8ces")
card = ExtResource("2_4mye5")
current_style = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ImageBorder" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"SimplePanelContainer"

[node name="Image" type="TextureRect" parent="HBoxContainer/VBoxContainer/ImageBorder"]
unique_name_in_owner = true
texture_filter = 1
material = SubResource("ShaderMaterial_ffecw")
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_addv4")
expand_mode = 5

[node name="CardName" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"HeaderMedium"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Learn Spell
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DescriptionBox" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="DescriptionBox" type="ScrollContainer" parent="HBoxContainer/DescriptionBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/DescriptionBox/DescriptionBox"]
layout_mode = 2

[node name="Description" type="Label" parent="HBoxContainer/DescriptionBox/DescriptionBox/VBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Wizard Man"
vertical_alignment = 1
autowrap_mode = 2

[node name="Grey" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pgvk1")

[node name="LockSymbol" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("4_eleac")

[node name="AcceptSymbol" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("5_jfr48")

[node name="LockSymbol2" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("6_6wcql")
